@@ -4,12 +4,8 @@
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8
 
-AS LINKABLE MAILTO ADDRESS="As linkable mailto address"
-DESCMOSEMAILCLOAK="Cloaks all e-mails in content from spambots using JavaScript"
-MODE="Mode"
-MOSEMAILCLOAK="mosemailcloak"
-NONLINKABLE TEXT="Non-linkable Text"
-SELECT HOW THE EMAILS WILL BE DISPLAYED="Select how emails will be displayed"
-
-
-
+PLG_CONTENT_EMAILCLOAK_XML_DESCRIPTION="Cloaks all e-mails in content from spambots using JavaScript"
+PLG_CONTENT_EMAILCLOAK_LINKABLE="As linkable mailto address"
+PLG_CONTENT_EMAILCLOAK_MODE_LABEL="Mode"
+PLG_CONTENT_EMAILCLOAK_NONLINKABLE="Non-linkable Text"
+PLG_CONTENT_EMAILCLOAK_MODE_DESC="Select how emails will be displayed"
