@@ -4,7 +4,6 @@
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8
 
-GESHI="GeSHi"
-DESCGESHI="Displays formatted code in Articles based on the GeSHi highlighting engine"
+PLG_CONTENT_GESHI_XML_DESCRIPTION="Displays formatted code in Articles based on the GeSHi highlighting engine"
 
 
