@@ -4,15 +4,12 @@
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8
 
-CODE THAT WILL WRAP MODULES="Code that will wrap Modules"
-DESCLOADPOSITION="Loads Module positions within Content, Syntax: {loadposition user1}"
-LOADPOSITION="loadposition"
-NO WRAPPING - RAW OUTPUT="No wrapping (raw output)"
-STYLE="Style"
-WRAPPED BY DIVS="Wrapped by Divs"
-WRAPPED BY MULTIPLE DIVS="Wrapped by Multiple Divs"
-WRAPPED BY TABLE - COLUMN="Wrapped by table (column)"
-WRAPPED BY TABLE - HORIZONTAL="Wrapped by table (horizontal)"
+PLG_LOADMODULE_XML_DESCRIPTION="Loads Module positions within Article, Syntax: {loadposition user1}"
 
-
-
+PLG_LOADMODULE_FIELD_STYLE_LABEL="Style"
+PLG_LOADMODULE_FIELD_STYLE_DESC="Code that will wrap Modules"
+PLG_LOADMODULE_FIELD_VALUE_DIVS="Wrapped by Divs"
+PLG_LOADMODULE_FIELD_VALUE_HORIZONTAL="Wrapped by table (horizontal)"
+PLG_LOADMODULE_FIELD_VALUE_MULTIPLEDIVS="Wrapped by Multiple Divs"
+PLG_LOADMODULE_FIELD_VALUE_RAW="No wrapping (raw output)"
+PLG_LOADMODULE_FIELD_VALUE_TABLE="Wrapped by table (column)"
