@@ -4,20 +4,13 @@
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8
 
-GT="&gt;"
-LT="&lt;"
-ALL PAGES=" All Pages"
-ARTICLE INDEX="Article Index"
-DESCCONTENTPAGEBREAK="Add Table of Contents functionality to a paginated Article. This is done automatically through the use of the page break button added to the lower part of the text panel in an Article. The HTML code is included here as a reference of what is available. The page break will be displayed in the text window as a simple horizontal line.<br />Syntax: Usage: &lt;hr class="_QQ_"system-pagebreak"_QQ_" /&gt;<br />&lt;hr class="_QQ_"system-pagebreak"_QQ_" title="_QQ_"The page title"_QQ_" /&gt; or <br />&lt;hr class="_QQ_"system-pagebreak"_QQ_" alt="_QQ_"The first page"_QQ_" /&gt; or <br />&lt;hr class="_QQ_"system-pagebreak"_QQ_" title="_QQ_"The page title"_QQ_" alt="_QQ_"The first page"_QQ_" /&gt; or <br />&lt;hr class="_QQ_"system-pagebreak"_QQ_" alt="_QQ_"The first page"_QQ_" title="_QQ_"The page title"_QQ_" /&gt;"
-HIDE="Hide"
-NEXT="Next"
-PAGE #="Page %s"
-PARAMENABLED="Select whether the Plug-in is enabled."
-PARAMSITETITLE="title and heading attibutes from Plug-in added to Site Title tag"
-PARAMSITETOC="Display a table of contents on multi-page Articles."
-PARAMSITESHOWALL="Allow Users to select the Show All feature"
-PREV="Prev"
-SHOW="Show"
-SHOW ALL="Show all"
-SITE TITLE="Site Title"
-TABLE OF CONTENTS="Table of Contents"
+PLG_CONTENT_PAGEBREAK_XML_DESCRIPTION="Add Table of Contents functionality to a paginated Article. This is done automatically through the use of the page break button added to the lower part of the text panel in an Article. The HTML code is included here as a reference of what is available. The page break will be displayed in the text window as a simple horizontal line.<br />Syntax: Usage: &lt;hr class="_QQ_"system-pagebreak"_QQ_" /&gt;<br />&lt;hr class="_QQ_"system-pagebreak"_QQ_" title="_QQ_"The page title"_QQ_" /&gt; or <br />&lt;hr class="_QQ_"system-pagebreak"_QQ_" alt="_QQ_"The first page"_QQ_" /&gt; or <br />&lt;hr class="_QQ_"system-pagebreak"_QQ_" title="_QQ_"The page title"_QQ_" alt="_QQ_"The first page"_QQ_" /&gt; or <br />&lt;hr class="_QQ_"system-pagebreak"_QQ_" alt="_QQ_"The first page"_QQ_" title="_QQ_"The page title"_QQ_" /&gt;"
+PLG_CONTENT_PAGEBREAK_ALL_PAGES="All Pages"
+PLG_CONTENT_PAGEBREAK_ARTICLE_INDEX="Article Index"
+PLG_CONTENT_PAGEBREAK_PAGE_NUM="Page %s"
+PLG_CONTENT_PAGEBREAK_SHOW_ALL_LABEL="Show all"
+PLG_CONTENT_PAGEBREAK_SHOW_ALL_DESC="Show All"
+PLG_CONTENT_PAGEBREAK_SITE_TITLE_LABEL="Show Site Title"
+PLG_CONTENT_PAGEBREAK_SITE_TITLE_DESC="Title and heading attibutes from Plug-in added to Site Title tag"
+PLG_CONTENT_PAGEBREAK_TABLE_OF_CONTENTS_LABEL="Table of Contents"
+PLG_CONTENT_PAGEBREAK_TABLE_OF_CONTENTS_DESC="Display a table of contents on multipage Articles."
