@@ -4,10 +4,11 @@
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8
 
-ABOVE="Above"
-DESCPAGENAVIGATION="Enables you to add the <em>Next &amp; Previous</em> functionality to an Article."
-BELOW="Below"
-POSITION="Position"
-POSITION OF PAGE NAVIGATION IN RELATION TO TEXT="The position of the <em>Page Navigation</em> function on the viewed page in relation to the text."
+PLG_PAGENAVIGATION_XML_DESCRIPTION="Enables you to add the <em>Next &amp; Previous</em> functionality to an Article."
+PLG_PAGENAVIGATION_FIELD_POSITION_LABEL="Position"
+PLG_PAGENAVIGATION_FIELD_POSITION_DESC="The position of the <em>Page Navigation</em> function on the viewed page in relation to the text."
+PLG_PAGENAVIGATION_FIELD_VALUE_ABOVE="Above"
+PLG_PAGENAVIGATION_FIELD_VALUE_BELOW="Below"
+
 
 
