@@ -4,8 +4,8 @@
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8
 
-ADD THE VOTING FUNCTIONALITY TO ITEMS="Add the Voting functionality to Articles"
-BEST="Best"
-POOR="Poor"
-RATE="Rate"
-USER RATING="User Rating"
+PLG_VOTE_XML_DESCRIPTION="Add the Voting functionality to Articles"
+PLG_VOTE_BEST="Best"
+PLG_VOTE_POOR="Poor"
+PLG_VOTE_RATE="Rate"
+PLG_VOTE_USER_RATING="User Rating"
