@@ -119,7 +119,6 @@ PLG_TINY_FIELD_VALUE_CENTER="Center"
 PLG_TINY_FIELD_VALUE_DEFAULT="Default"
 PLG_TINY_FIELD_VALUE_EXTENDED="Extended"
 PLG_TINY_FIELD_VALUE_FRONT="Front Only"
-PLG_TINY_FIELD_VALUE_HIDE="Hide"
 PLG_TINY_FIELD_VALUE_LEFT="Left"
 PLG_TINY_FIELD_VALUE_LTR="Left to Right"
 PLG_TINY_FIELD_VALUE_NAMED="named"
@@ -130,7 +129,6 @@ PLG_TINY_FIELD_VALUE_RAW="raw"
 PLG_TINY_FIELD_VALUE_RELATIVE="Relative"
 PLG_TINY_FIELD_VALUE_RIGHT="Right"
 PLG_TINY_FIELD_VALUE_RTL="Right to Left"
-PLG_TINY_FIELD_VALUE_SHOW="Show"
 PLG_TINY_FIELD_VALUE_SILVER="Office2007 Silver"
 PLG_TINY_FIELD_VALUE_SIMPLE="Simple"
 PLG_TINY_FIELD_VALUE_TOP="Top"
