@@ -6,6 +6,17 @@
 
 ; Date format
 
+JNO="No"
+JOFF="Off"
+JON="On"
+JYES="Yes"
+JPREVIOUS="Previous"
+JNEXT="Next"
+JSAVE="Save"
+JCANCEL="Cancel"
+JCOMMON_GT="&gt;"
+JCOMMON_LT="&lt;"
+
 DATE_FORMAT_LC="%A, %d %B %Y"
 DATE_FORMAT_LC1="%A, %d %B %Y"
 DATE_FORMAT_LC2="%A, %d %B %Y %H:%M"
