@@ -8,7 +8,7 @@
 	<authorEmail>admin@joomla.org</authorEmail>
 	<authorUrl>www.joomla.org</authorUrl>
 	<version>1.0</version>
-	<description>PLG_CONT_EXAMPLE_DESC</description>
+	<description>PLG_CONTENT_EXAMPLE_DESCRIPTION</description>
 
 	<files>
 		<filename plugin="example">example.php</filename>
@@ -22,23 +22,23 @@
 		<field
 			name="field1"
 			type="text"
-			label="Example field 1"
-			description="Example field 1" />
+			label="PLG_CONTENT_EXAMPLE_FIELD_LABEL_FIELD1"
+			description="PLG_CONTENT_EXAMPLE_FIELD_DESC_FIELD1" />
 	</fields>
 	<fields
 		group="advanced">
 		<field
-			name="field1"
+			name="field2"
 			type="text"
-			label="Example field 1"
-			description="Example field 1" />
+			label="PLG_CONTENT_EXAMPLE_FIELD_LABEL_FIELD2"
+			description="PLG_CONTENT_EXAMPLE_FIELD_DESC_FIELD2" />
 	</fields>
 	<fields
 		group="example">
 		<field
-			name="field2"
+			name="field3"
 			type="text"
-			label="Example field 2"
-			description="Example field 2" />
+			label="PLG_CONTENT_EXAMPLE_FIELD_LABEL_FIELD3"
+			description="PLG_CONTENT_EXAMPLE_FIELD_DESC_FIELD3" />
 	</fields>
 </install>
