@@ -4,4 +4,4 @@
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8
 
-PLG_CONT_EXAMPLE_DESC="This is a description of the functionnalities of this plugin."
+PLG_CONTENT_EXAMPLE_DESCRIPTION="This is a description of the functionnalities of this plugin."
