@@ -3,14 +3,14 @@
 	version="1.6"
 	type="plugin"
 	group="content">
-	<name>Content - Code Highlighter (GeSHi)</name>
+	<name>Content - Code Hightlighter (GeSHi)</name>
 	<author>Joomla! Project</author>
 	<creationDate>November 2005</creationDate>
 	<copyright>Copyright (C) 2005 - 2010 Open Source Matters. All rights reserved.</copyright>
 	<license>GNU General Public License version 2 or later; see LICENSE.txt</license>
 	<authorUrl>qbnz.com/highlighter</authorUrl>
 	<version>1.6</version>
-	<description>DESCGESHI</description>
+	<description>PLG_CONTENT_GESHI_XML_DESCRIPTION</description>
 	<files>
 		<filename
 			plugin="geshi">geshi.php</filename>
