@@ -11,7 +11,7 @@
 	<authorEmail>admin@joomla.org</authorEmail>
 	<authorUrl>www.joomla.org</authorUrl>
 	<version>1.5</version>
-	<description>Add the Voting functionality to Items</description>
+	<description>PLG_VOTE_XML_DESCRIPTION</description>
 	<files>
 		<filename
 			plugin="vote">vote.php</filename>
